# Digit_RBKD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
codegen/include/: digit_rbkd.h
codegen/src/: digit_rbkd.cpp
digit_xml/: digit-v3.xml  digit_simplified.xml
include/: common_defines.hxx  digit_model.hxx  rigid_body.hxx
include/digit_rbkd/: CasadiEigenCodeGenerator.hpp  common_defines.hxx  digit_model.hxx  digit_model_library.hpp  rigid_body.hxx
include/digit_rbkd/rbda/: 3d_vectors_and_rotation.hxx  data_structures.hxx  dynamics_functions.hxx  spatial_vector_arithmetic.hxx
include/rbda/: 3d_vectors_and_rotation.hxx  data_structures.hxx  dynamics_functions.hxx  rbda.hxx  spatial_vector_arithmetic.hxx
src/: digit_model_library.cpp  generate_code.cpp  main.cpp  rigid_body.cpp  temp_file_fix.cpp  use_generated_code.cpp
src/test/: CodeGenEigenTest.cpp  CodeGenTest.cpp  CppADTest.cpp  casadi_symbolic_eigen.cpp  digit_model.cpp
